<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dds_bridge</name>
  <version>0.0.1</version>
  <description>Package which allows to translate messeges between FastRTPS working in IPv4 network and CycloneDDS working in IPv6 network.</description>
  <maintainer email="lukasz.mitka@husarion.com">Łukasz Mitka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>fastcdr</buildtool_depend>
  <buildtool_depend>fastrtps</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
